# vitulus_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Device_icon_status.msg  DockProgram.msg  Imu_status.msg  MapEditMap.msg  MapEditPolygon.msg  MapEditPolygonList.msg  MapEditZone.msg  MapEditZoneList.msg  Moteus_controller_state.msg  Mower.msg  Navi_transform.msg  NmConn.msg  NmConnAdd.msg  NmConnDetail.msg  NmSsid.msg  NmSsidList.msg  PlannerProgram.msg  PlannerProgramList.msg  Rtabmap_settings.msg  StringList.msg
